; ModuleID = '/home/carl/AnghaBench/redis/src/extr_geo.c_addReplyDoubleDistance.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_geo.c_addReplyDoubleDistance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%.4f\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addReplyDoubleDistance(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  %5 = alloca [128 x i8], align 16
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %7 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %8 = load double, double* %4, align 8
  %9 = call i32 @snprintf(i8* %7, i32 128, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), double %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @addReplyBulkCBuffer(i32* %10, i8* %11, i32 %12)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, double) #1

declare dso_local i32 @addReplyBulkCBuffer(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
